Docs: expand comment on tagging id properties to update

Addresses issue from T74000.